# cbxy

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: publish-cbxy-editor.yml  publish-cbxy-generator.yml  publish-cbxy-reader.yml  publish-cbxy.yml  publish.yml
cbxy/: archive.py  detect.py  format.py  ml.py
cbxy-editor/: .gitignore  LICENSE  README.md  pyproject.toml
cbxy-editor/cbxy_editor/: app.py  book.py  cli.py
cbxy-editor/cbxy_editor/static/: app.js  style.css
cbxy-generator/: .gitignore  README.md  pyproject.toml
cbxy-generator/cbxy_generator/: archive.py  cli.py  detect.py  format.py  ml.py
cbxy-meta/: LICENSE  README.md  pyproject.toml
cbxy-reader/: README.md  pyproject.toml
cbxy-reader/cbxy_reader/: app.py  archive.py  book.py  cli.py
cbxy-reader/cbxy_reader/static/: app.js
cbxy/detect/: __init__.py  cli.py  cv.py  engine.py  ml.py  panels.py
cbxy/editor/: app.py  book.py  cli.py
cbxy/editor/static/: app.js  style.css
cbxy/editor/templates/: index.html
cbxy/generator/: cli.py
cbxy/reader/: app.py  book.py  cli.py
cbxy/reader/templates/: index.html
demo/: Little_Nemo_1907-09-29.cbr  Little_Nemo_1907-09-29.cbxy  app.js  book.json  index.html  style.css
spec/: index.html  v0.1.0.md
spec/v1.0/: index.html  style.css
