[project]
name = "cbxy"
version = "0.2.0"
description = "Comic panel sidecar format and tools (detect, reader, editor)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nawaz Gafar" }]
keywords = ["comics", "cbz", "cbr", "panels", "cbxy", "guided-view"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "flask>=3.1.0",
    "huggingface-hub>=1.23.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "ultralytics>=8.4.96",
]

[project.urls]
Homepage = "https://github.com/ngafar/cbxy"
Repository = "https://github.com/ngafar/cbxy"
Issues = "https://github.com/ngafar/cbxy/issues"

[project.scripts]
cbxy-detect = "cbxy.detect.cli:main"
cbxy-reader = "cbxy.reader.cli:main"
cbxy-editor = "cbxy.editor.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy"]
