[project]
name = "cbxy-editor"
version = "0.1.0"
description = "Browser editor for .cbxy panel bounding boxes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "pillow>=12.3.0",
]

[project.scripts]
cbxy-editor = "cbxy_editor.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy_editor"]
