[project]
name = "cbxy-editor"
version = "0.1.0"
description = "Browser editor for .cbxy panel bounding boxes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nawaz Gafar" }]
keywords = ["comics", "cbz", "cbr", "panels", "cbxy", "editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "flask>=3.1.0",
    "pillow>=12.3.0",
]

[project.urls]
Homepage = "https://github.com/ngafar/cbxy"
Repository = "https://github.com/ngafar/cbxy"
Issues = "https://github.com/ngafar/cbxy/issues"

[project.scripts]
cbxy-editor = "cbxy_editor.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy_editor"]
