[project]
name = "cbxy-generator"
version = "0.1.0"
description = "Detect comic panels in a CBR/CBZ and write a .cbxy sidecar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.23.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "ultralytics>=8.4.96",
]

[project.scripts]
cbxy-generator = "cbxy_generator.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy_generator"]
