[project]
name = "cbxy"
version = "0.1.0"
description = "Comic panel sidecar format — install all cbxy tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nawaz Gafar" }]
keywords = ["comics", "cbz", "cbr", "panels", "cbxy", "guided-view"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "cbxy-editor==0.1.0",
    "cbxy-generator==0.1.0",
    "cbxy-reader==0.1.0",
]

[project.urls]
Homepage = "https://github.com/ngafar/cbxy"
Repository = "https://github.com/ngafar/cbxy"
Issues = "https://github.com/ngafar/cbxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy"]
