[project]
name = "cbxy-reader"
version = "0.1.0"
description = "Sample browser reader for CBR/CBZ + .cbxy guided view"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
]

[project.scripts]
cbxy-reader = "cbxy_reader.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbxy_reader"]
